# satisfactory-planner

./: .gitignore  Cargo.toml  LICENSE  README.md  game-db.json  recipes.yml
.github/workflows/: clippy.yml  rust-format.yml
client/: .env  .eslintrc  index.html  package.json  vite.config.ts
client/src/: App.tsx  FactoriesContext.tsx  FactoryOutput.tsx  GameDatabaseContext.tsx  Outputs.tsx  factory.tsx  game.ts  index.tsx
scripts/: create-game-db.py  requirements.txt  setup-venv.bat  setup-venv.sh
src/: main.rs  parts.rs  utils.rs
src/game/: building.rs  fluid.rs  item.rs  item_value_pair.rs  item_value_pairs.rs  machine.rs  macros.rs  mod.rs  recipe.rs  resource.rs  resource_value_pair.rs
src/plan/: config.rs  full_plan_graph.rs  graph.rs  mod.rs  scored_graph.rs  solved_graph.rs  solver.rs
