[package]
name = "satisfactory-planner"
description = "Tool for generating production plans for Satisfactory"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_yaml = "0.9"
serde_json = "1.0"
petgraph = "0.6"
anyhow = "1.0"
indexmap = {version = "2.0", features = ["std", "serde"] }
clap = { version = "4.4.1", features = ["derive"] }
good_lp = { version = "1.5.0", default-features = false, features = ["minilp"] }
