[package]
name = "satisfactory-planner"
description = "Tool for generating production plans for Satisfactory"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
petgraph = { version = "0.6", features = ["serde-1"] }
good_lp = { version = "1.5.0", default-features = false, features = ["minilp"] }
actix-web = "4.4"
actix-files = "0.6"
actix-cors = "0.6"
env_logger = "0.10"
